# Tiny_Stories_Diffusion

./: .gitignore  README.md  Tinystories_46.ipynb  Tinystories_data_download.py  Tinystories_data_download_all.py  Tinystories_data_download_limit.py  Tinystories_diffusion_2.py  app.py  app_med.py  app_new.py  main.py  modify_notebook.py  patch_notebook.py  pyproject.toml  requirements.txt  tinystories_diffusion.ipynb  tinystories_diffusion_v1.ipynb
notebooks/: inference.ipynb  tinystories-diffusion-gpt2-dual.ipynb  tinystories-diffusion-gpt2-dual_kaggle-run.ipynb  tinystories-diffusion-med-dual_kaggle-run.ipynb  tinystories-diffusion_gpt-2.ipynb  tinystories-diffusion_kaggle_run.ipynb  tinystories-diffusion_medium.ipynb  tinystories-diffusion_medium_dual.ipynb  tinystories_diffusion.ipynb
scripts/: Tinystories-diffusion-GPT-2.py  Tinystories-diffusion-medium.py  inference.py  inference_new.py
